# infermail

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: accounts.yml
docs/: SESSION_NOTES.md
infermail/: cli.py  config.py
infermail/backup/: __init__.py
infermail/classify/: labeler.py  predictor.py
infermail/db/: helpers.py  models.py  session.py
infermail/fetch/: imap.py  runner.py
infermail/sync/: __init__.py  demotion.py
migrations/: env.py
migrations/versions/: 54c55c7f095f_initial.py  64494dc970e4_add_source_folder_and_demoted_to_spam_at_to_emails.py
models/: meta.json
scripts/: relabel_newsletter.py  train.py
tests/: test_predictor.py
