[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infermail"
version = "0.1.0"
description = "ML-powered email organizer and classifier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imapclient>=3.0.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tenacity>=8.2",
    "click>=8.1",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.0",
    "readchar>=4.0",
    "joblib>=1.5.3",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
train = [
    "pandas>=2.0",
    "lightgbm>=4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
infermail = "infermail.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
